--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-use-audio-player": "^1.2.6",
     "styled-components": "^5.3.8",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
