--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_CLIENT_ID = d47f4a55fc194551a242899e87588163
-REACT_APP_REDIRECT_URI = http://localhost:3000
+REACT_APP_REDIRECT_URI = https://songuessr.netlify.app
 REACT_APP_AUTH_ENDPOINT = https://accounts.spotify.com/authorize
 REACT_APP_RESPONSE_TYPE = token
